updated term to match vim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,7 +36,7 @@ bind -r L resize-pane -R 10
 # Add truecolor support
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 # Default terminal is 256 colors
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 
 tm_color_active=colour32
 tm_color_inactive=colour241
