--- a/.tmux.conf
+++ b/.tmux.conf
@@ -93,8 +93,10 @@ tm_date="#[fg=$tm_color_inactive] %R %d %b"
 tm_host="#[fg=$tm_color_feature,bold]#h"
 tm_session_name="#[fg=$tm_color_feature,bold]#S"
 
+tm_battery="CPU: #{cpu_icon} #{cpu_percentage}"
+
 set -g status-left $tm_session_name' '
-set -g status-right $tm_tunes' '$tm_date' '$tm_host
+set -g status-right $tm_tunes' '$tm_date' '$tm_host' '$tm_battery
 
 
 
@@ -104,6 +106,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-strategy-nvim 'session'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 #set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 # Other examples:
