--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,7 @@ bind-key C-Space send-prefix
 bind-key c new-window -c "#{pane_current_path}"
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
+bind r move-window -r
 
 #Enable mouse control (clickable windows, panes, resizable panes )
 set -g mouse on
