--- a/coc-settings.json
+++ b/coc-settings.json
@@ -3,7 +3,7 @@
     "ccls": {
       "command": "/home/logan/apps/ccls/Release/ccls",
       "filetypes": ["c", "cpp"],
-      "rootPatterns": [".ccls", "tags","compile_commands.json", ".vim/", ".git/", ".hg/"],
+      "rootPatterns": [".ccls-root","compile_commands.json"],
       "initializationOptions": {
         "cache": {
           "directory":".ccls-cache"
@@ -23,11 +23,10 @@
     }
   },
   "python.linting.pylintEnabled": true,
-  "python.linting.pylintPath": "/home/logan/python-virtual-environments/nvim3/pylint",
+  "python.linting.pylintPath": "/home/logan/python-virtual-environments/nvim3/bin/pylint",
   "python.sortImports.path": "/home/logan/python-virtual-environments/nvim3/bin/isort",
   "python.venvPath": "/home/logan/python-virtual-environments/",
   "python.jediEnabled": false,
   "coc.source.buffer.enable": false,
   "coc.source.around.enable":false
 }
-
