Added rust, urlview

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -114,6 +114,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-strategy-nvim 'session'
 set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-urlview'
 #set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 # Other examples:
