--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,6 @@
 #---TMUX CONFIG FILE---#
+set-option -g default-shell /bin/zsh
+
 #remap prefix from 'C-b' to 'C-b'
 unbind C-Space
 set-option -g prefix C-Space
@@ -106,10 +108,6 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 #set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 # Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
