--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,5 @@
 #---TMUX CONFIG FILE---#
-set-option -g default-shell /bin/zsh
-
-#remap prefix from 'C-b' to 'C-b'
-unbind C-Space
-set-option -g prefix C-Space
-bind-key C-Space send-prefix
+set-option -g default-shell /usr/bin/zsh
 
 #add new splits and new windows in current directory
 bind-key c new-window -c "#{pane_current_path}"
