--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,7 @@ set -g mouse on
 
 #Enable vi mode
 set-window-option -g mode-keys vi
+set -g status-keys vi
 
 #Vim-like navigation
 bind h select-pane -L
