Added aliases and 3rd monitor

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,9 @@ bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 bind r move-window -r
 
+# clear scrollback buffer
+bind C clear-history
+
 #Enable mouse control (clickable windows, panes, resizable panes )
 set -g mouse on
 
