--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,6 +29,9 @@ bind -r J resize-pane -D 10
 bind -r K resize-pane -U 10
 bind -r L resize-pane -R 10
 
+# Copy to Wayland system clipboard
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "wl-copy"
+
 #onedark config settings
 #set -g @onedark_date_format "%D"
 
