--- a/.tmux.conf
+++ b/.tmux.conf
@@ -103,8 +103,7 @@ set -g @resurrect-strategy-nvim 'session'
 set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# Other examples:
-bind -n DoubleClick1Pane run-shell "file_window -x '#{pane_current_path}/#{mouse_word}'"
+# bind -n DoubleClick1Pane run-shell "file_window -x '#{pane_current_path}/#{mouse_word}'"
 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
