--- a/.gitconfig
+++ b/.gitconfig
@@ -1,10 +1,12 @@
 [user]
 	name = Logan Praneis
-	email = lpraneis@gmail.com
+
 [alias]
 	s = status
 	co = checkout
 	last = log -1 HEAD
+	dt = "! args=$@; shift $#; nvim -c \"DiffviewOpen $args\""
+	pr = "!f(){ branch=${1:-$(git branch --show-current)}; target=${2:-origin/master}; nvim -c \"DiffviewOpen $target...$branch\"; };f"
 
 [core]
 	pager = delta
@@ -21,3 +23,9 @@
 
 [diff]
 	colorMoved = default
+h
+[log]
+	date = local
+
+[pull]
+	rebase = false
