git alias; win nvim fix

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,9 +4,17 @@
 [alias]
 	s = status
 	co = checkout
+	# log the last commit
 	last = log -1 HEAD
+	# Open a diff in nvim diffview
 	dt = "! args=$@; shift $#; nvim -c \"DiffviewOpen $args\""
+	# Open PR in nvim diffview
 	pr = "!f(){ branch=${1:-$(git branch --show-current)}; target=${2:-origin/master}; nvim -c \"DiffviewOpen $target...$branch\"; };f"
+	# View what commits were merged as part of a merge commit
+	show-merge = "!f(){ merge_commit=${1:?Merge commit not provided}; git log --pretty=oneline $1^..$1; };f"
+	# View what commits were merged as part of a merge commit, with graph and fancier merge-base
+	log-merge = "!f(){ merge=${1:?Merge commit not provided}; parents=$(git log $merge --pretty=format:%P -1); base=$(git merge-base --octopus $parents); shift 1; other_args=$@; git log --graph $base..$merge $other_args; };f"
+
 
 [core]
 	pager = delta
@@ -23,7 +31,7 @@
 
 [diff]
 	colorMoved = default
-h
+
 [log]
 	date = local
 
