--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,10 @@ bind -r L resize-pane -R 10
 # Copy to Wayland system clipboard
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "wl-copy"
 
+# Configure C-e to edit the current pane in neovim in a new window
+set-option -g history-limit 20000
+bind-key C-e run-shell "~/tools/dotfiles/scripts/vim-edit-tmux-output"
+
 #onedark config settings
 #set -g @onedark_date_format "%D"
 
@@ -39,7 +43,7 @@ bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "wl-copy"
 # Add truecolor support
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 # Default terminal is 256 colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 tm_color_active=colour32
 tm_color_inactive=colour252
